--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
       <header>
           <h1>факти про іспанію</h1>
       </header>
